# beam

./: .env.example  .gitignore  CHANGELOG.md  Containerfile.ubi  Dockerfile  LOCAL_DEVELOPMENT.md  README.md  beam.xml  demo.md  docker-compose.yml  eslint.config.js  flake.nix  package-lock.json  result  unraid-template.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docker-publish.yml
backend/: Cargo.toml
backend/src/: config.rs  cookie_auth.rs  main.rs  pwa.rs  security.rs  services.rs  session_id.rs  state.rs  static_files.rs  tests.rs  utils.rs
backend/src/middleware/: mod.rs  security.rs  static_files.rs
backend/src/routes/: auth.rs  files.rs  mod.rs  upload.rs  verify_pin.rs
backend/src/routes/auth/: mod.rs  pin_required.rs  verify_pin.rs
backend/src/routes/files/: helpers.rs  mod.rs  ops.rs
backend/src/routes/files/ops/: delete.rs  rename.rs
backend/src/routes/upload/: cancel.rs  chunk.rs  init.rs  mod.rs  utils.rs
backend/src/services/: notifications.rs  pwa.rs
docs/: BIND_MOUNT_FIX.md
frontend/: Cargo.toml  index.html
frontend/Assets/: app.css  base.css  header.css
frontend/src/: api.rs  app.rs  header.rs  i18n.rs  js_api.rs  main.rs  storage.rs  types.rs  utils.rs
old_node/: app.js  auth.js  files.js  index.js  notifications.js  server.js  upload.js
old_node/middleware/: cors.js  rateLimiter.js  security.js
old_node/utils/: cleanup.js  demoMode.js  (+4 more)
public/: index.html  login.html  service-worker.js  styles.css
test/: auth.test.js  files.test.js  path-validation.test.js  security.test.js  upload.test.js
(+15 files in other folders)
