[package]
name = "backend"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "limit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-extra = { version = "0.9", features = ["cookie"] }
cookie = "0.18"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2.3"
constant_time_eq = "0.3"
